--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -55,6 +55,18 @@ jobs:
             target: template_release
             platform: linux
             arch: x86_64
+          - identifier: android-debug
+            os: ubuntu-latest
+            name: Android Debug
+            target: template_debug
+            platform: android
+            arch: arm64
+          - identifier: android-release
+            os: ubuntu-latest
+            name: Android Release
+            target: template_release
+            platform: android
+            arch: arm64
 
     steps:
       - name: Checkout project
@@ -85,6 +97,24 @@ jobs:
         uses: egor-tensin/setup-mingw@v2
         with:
           version: 12.2.0
+      
+      - name: (Android) Install JDK 17
+        if: ${{ matrix.platform == 'android' }}
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: temurin
+
+      - name: (Android) Install Android SDK
+        if: ${{ matrix.platform == 'android' }}
+        uses: android-actions/setup-android@v3
+
+      - name: (Android) Install NDK r23c
+        if: ${{ matrix.platform == 'android' }}
+        uses: nttld/setup-ndk@v1
+        with:
+          ndk-version: r23c
+          link-to-sdk: true
 
       - name: Compile godot-cpp
         shell: sh
