--- a/.github/workflows/builds.yml
+++ b/.github/workflows/builds.yml
@@ -70,12 +70,12 @@ jobs:
 
     steps:
       - name: Checkout project
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           submodules: recursive
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.x'
 
@@ -97,7 +97,7 @@ jobs:
         uses: egor-tensin/setup-mingw@v2
         with:
           version: 12.2.0
-      
+
       - name: (Android) Install JDK 17
         if: ${{ matrix.platform == 'android' }}
         uses: actions/setup-java@v3
@@ -133,14 +133,14 @@ jobs:
           Remove-Item bin/* -Include *.exp,*.lib,*.pdb -Force
 
       - name: Upload artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: ${{ github.event.repository.name }}
+          name: '${{ env.LIBNAME }}.${{ matrix.platform }}.${{ matrix.target }}.${{ matrix.arch }}'
           path: 'bin/'
 
       - name: Archive Release
         if: success() && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        uses: thedoctor0/zip-release@0.7.1
+        uses: thedoctor0/zip-release@0.7.6
         with:
           type: 'zip'
           filename: '${{ env.LIBNAME }}.${{ matrix.platform }}.${{ matrix.target }}.${{ matrix.arch }}.zip'
@@ -155,3 +155,4 @@ jobs:
           omitNameDuringUpdate: true
           omitBodyDuringUpdate: true
           token: ${{ secrets.GITHUB_TOKEN }}
+          
